tests/ui/feature-gates/feature-gate-explicit-extern-abis.stderr
error: extern declarations without an explicit ABI are disallowed
  --> $DIR/feature-gate-explicit-extern-abis.rs:3:1
   |
LL | extern fn foo() {}
   | ^^^^^^

error: aborting due to 1 previous error

