tests/ui/feature-gates/feature-gate-explicit-extern-abis.rs
#![feature(explicit_extern_abis)]

extern fn foo() {}
//~^ ERROR extern declarations without an explicit ABI are disallowed

fn main() {}
